# influence_maximization

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  inputparser.cpp  inputparser.h  main.cpp  node.h  optionparser.cpp  optionparser.h  simulator.cpp  simulator.h  simulator_thread.cpp  simulator_thread.h
